examples/test/testpolicy17717.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17717
  namespace: namespace417
spec:
  podSelector:
    matchLabels:
      key12: value8
      key3: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value14
          key6: value38
          key28: value22
      podSelector:
        matchLabels:
          key38: value35
